static/css/custom.css
/*GENERAL*/
body {
    min-height: 100vh;
    width: 100%;
    margin: 0;
    padding-bottom: 75.3px;
    position: relative;
  }
  main {
    width: 100vw;
    margin: 0 auto;
    padding: 30px 0px;
  }
  
/*HEADER*/
.logo_title, .logo_title::after, .logo_title:hover{
    font-variant: small-caps;
    color:#669900!important;
    letter-spacing: 1px;
    font-size: 45px;
    font-weight: 500;
    display: flex;
    justify-content: center;
    align-items: center;
    text-decoration: none;
}


.title h1{
    color: #666666;
    font-variant: small-caps;
    margin: 20px 0px 50px 0px;
}

/*MAIN NAVIGATION*/
.navbar{
    background-color:#FF9900;
} 
a.dropdown-item:hover{
    color: #ffffff!important;
    background-color: #FF9900;
}

.navbar a{
    font-size: 22px;
    color: #ffffff!important;
} 

a:hover, a.dropdown-item{
    color: #666666!important;
}


/*CATEGORY NAVIGATION*/
.cat-bar{
    width:100%;
    overflow:hidden;
    display: flex;
    justify-content: center;
    align-items: center;
} 
.cat-bar .cat-bar-item{
    padding:16px 16px;
    float: left;
    color: #666666;
    font-size: 22px;
}
hr.bar-end{
    border-top: 2px solid#669900;
    margin-top: 0px;
}

/*FORMS*/
label{
    color: #666666;
    font-size: 1rem;
    font-weight: 400;
}

.fieldset-label{
    color: #669900;
    font-weight: 600;
}

.btn{
    border: 2px solid #FF9900!important;
    color: #666666!important;
    font-size: 1.2rem!important;
}

.btn:hover, .btn:focus-within{
    color: #ffffff!important;
    background-color: #FF9900!important;
}

button.form-control{
    background-color: #FF9900;
    border: none;
}

#id_image.form-control{
    border: none;
    padding-left: 0px;
}

.form-group{
    margin-bottom: 30px!important;
}

.error-msg{
    color: #ff0000;
}

input.form-control.search-box{
    background: transparent;
    border: none;
    border-bottom: 1px solid #ffffff;
    font-size: 18px;
}

.form-control:focus, .textinput.form-control:focus, .emailinput.form-control:focus{
    border: none!important;
    border-bottom: 2px solid #669900!important;
    box-shadow: none!important;
}


.textarea.form-control:focus{
    border: 2px solid #669900!important;
    box-shadow: none!important;
}

.textinput.form-control, .emailinput.form-control{
    border: none!important;
    border-bottom: 1px solid #666666!important;
    box-shadow: none!important;
}

/*STRIPE*/

.StripeElement {
    box-sizing: border-box;
  
    height: 40px;
  
    padding: 10px 12px;
  
    border: 1px solid transparent;
    border-radius: 4px;
    background-color: white;
  
    box-shadow: 0 1px 3px 0 #e6ebf1;
    -webkit-transition: box-shadow 150ms ease;
    transition: box-shadow 150ms ease;
  }
  
  .StripeElement--focus {
    box-shadow: 0 1px 3px 0 #cfd7df;
  }
  
  .StripeElement--invalid {
    border-color: #fa755a;
  }
  
  .StripeElement--webkit-autofill {
    background-color: #fefde5 !important;
  }

/*PROJECT DETAILS*/

.fa-coins, .fa-question-circle, .fa-exclamation-circle{
    color:#FF9900!important;
}

.detail_title{
    font-size: 30px;
    font-weight: bold;
}
.subtext, .progressbar-text{
    font-size: 18px;
}

.expired{
    font-size: 20px;
    font-style: italic bold;
    color: #FF9900;
}

.maintext {
    font-weight: bold;
    font-size: 20px;
    color: #666666;
}

.detail_info{
    margin: 60px 10px 0px 40px;
}

h2{
    color: #666666;
}

.orange_line{
    border-top: 2px solid #FF9900;
    margin-top: 0px;
}

.footer hr.orange{
    border-top: 0.5px solid #FF9900;
    margin-top: 0px;
}


.footer_detail{
    margin-bottom: 0px;
    color: #666666;
}

.footer_row{
    margin-bottom: 0;
}

.footer {
    padding: 20px;
    bottom: 0;
    width: 100%;
    position: absolute;
  }

  .coin_image{
      height: 300px;
      width: 150px;
      float: left;
  }

  .div_form{
    padding-left: 80px!important;
  }
  .main_div{
      position: relative!important;
  }

  .main_coin_image{
    padding: 20px;
    bottom: 0;
    position: absolute!important;
  }


/*HOME - PROJECTS PAGE*/
.progress{
    height: 2rem!important;
    border: 2px solid #669900!important;
    background-color: #ffffff!important;
}
.progress-bar{
    background-color: #669900!important;
    font-size: 20px;
}

.progressbar-text, .subtext{
    color: #666666;
    font-style: italic;
}

.progress-section{
    top: 50%;
}

.new_projects{
    background-color: rgba(66, 99, 00, 0.20);
    margin-bottom: 0;
}

.new_projects_title{
    border: 2px solid #FF9900;
    font-variant: small-caps;
}

.new_projects_title h2{
    font-size: 32px;
}


.img-fluid{
    /* max-width: 100%; */
    width: 333.66px;
    height: 187.68px!important;
    /* margin-top: 30px; */
}

/*FOOTER*/
/*PAYMENT_PAGE*/
.project_title{
    color: #669900!important;
    font-size: 20px;
}

/*PAYMENT SUCCESS*/
.green_block{
    background-color: #669900;
    color: #ffffff;
    font-variant: small-caps;
    letter-spacing: 2px;
    font-size: 30px;
    font-weight: 500;
    padding: 50px 20px;
}

.green_block img{
    margin-left: -130px;
    margin-top: -160px;
}

.pay-success{
    margin-top: 200px;
}

/*PROJECT CATEGORIES*/


.category.progress-section{
    width: 200px;
    margin-left: 100px;
}


.pagination_block{
    background-color: transparent;
    color: transparent;
    border: none;
}

th{
    visibility: hidden;
}

#myTable_wrapper{
    margin: auto
}

